# ha-groq

./: .codespellignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .strict-typing  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  api_spec.md  hacs.json  pyproject.toml  quality_scale.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto_assign.yml  auto_assign_new_issues.yml  auto_label_issues.yml  ci.yml  codespell.yml  comment_missing_diagnostics.yml  hassfest.yml  quality-scale.yml  release-assets.yml  stale_blocked_issues.yml  tests.yml  validate.yaml
custom_components/groq/: __init__.py  ai_task.py  api.py  attachments.py  config_flow.py  const.py  conversation.py  diagnostics.py  entity.py  errors.py  feature_registry.py  flow_schemas.py  icons.json  manifest.json  model_registry.py  prompt_cache.py  rate_limit.py  repairs.py  runtime.py  services.py  services.yaml  strings.json  stt.py  subentries.py  text_generation.py  tts.py  tts_engine.py  types.py  vocal_directions.py
custom_components/groq/translations/: bg.json  cs.json  da.json  de.json  el.json  en-AU.json  en-CA.json  en-IE.json  en-NZ.json  en-US.json  en.json  es.json  et.json  (+12 more)
devtools/docker/: Dockerfile  docker-compose.yml  requirements-dev.txt  requirements-min-ha.txt
docs/: architecture.md
scripts/: importtime_profile.py  issue_labeling.py  strict-typing  test  validate_quality_scale.py
tests/scripts/: test_importtime_profile.py  test_issue_labeling.py  test_validate_quality_scale.py
(+6 files in other folders)
